--- a/templates/header.html
+++ b/templates/header.html
@@ -7,6 +7,7 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link active" aria-current="page" href="/">首頁</a>
+          <a class="nav-link active" aria-current="page" href="/userlist/">會員表單</a>
           {% if username %}
           <a class="nav-link" href="/userinfo/">會員資料</a>
           <a class="nav-link" href="/logout/">登出</a>
