--- a/templates/userinfo.html
+++ b/templates/userinfo.html
@@ -16,7 +16,9 @@
             <td>密碼:{{ userpassword }}</td>
         </tr>
     </table>
-    
 </p>
+
+<a href = "/userdelete/{{ userpassword }}/"><button type="button" class="btn btn-danger">刪除資料</button></a>
+
 
 {% endblock %}
