--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 {% block title %} 首頁 {% endblock %}
 {% block content %}
-{% if username %}
+{{ username}}
 {{ message }}
-{% endif %}
 {% endblock %}
