--- a/templates/userinfo.html
+++ b/templates/userinfo.html
@@ -18,7 +18,7 @@
     </table>
 </p>
 
-<a href = "/userdelete/{{ userpassword }}/"><button type="button" class="btn btn-danger">刪除資料</button></a>
+<a href = "/userdelete/{{ username }}/{{ userpassword }}/"><button type="button" class="btn btn-danger">刪除資料</button></a>
 
 
 {% endblock %}
